<resources>
    <string name="app_name">MyVideoGameList</string>
    <string name="project_logo">project logo</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sing_up">Sing Up</string>
    <string name="sing_in">Sing in</string>
    <string name="list_title">List Title</string>
    <string name="create_list">Create List</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="add_game">Add Game</string>
    <string name="game_title">Game Title</string>
    <string name="description">Description</string>
    <string name="register_game">Register Game</string>
    <string name="title">Title</string>
    <string name="add_to_list">Add to List</string>
    <string name="review">Review</string>
    <string name="review_text">Review Text</string>
    <string name="score">Score :</string>
    <string name="submit">Submit</string>
    <string name="avarage_score">Avarage Score</string>
    <string name="developer">Developer</string>
</resources>
